Fix horizontal whitespace

--- a/src/index.css
+++ b/src/index.css
@@ -107,6 +107,8 @@
     height: 100%;
     position: fixed;
     width: 100%;
+    margin: 0;
+    padding: 0;
   }
   
   #root {
